[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartsheet_helper"
version = "0.0.2"
authors = [
    { name="shrank", email="info@murxs.ch" },
]
license = { file = "LICENSE" }
readme = "README.md"
description = "Simple class that helps dealing with smarsheet api"
requires-python = ">=3.0"
classifiers = [
   "Programming Language :: Python :: 3",
   "Operating System :: OS Independent",
]
keywords = ["smartsheet"]
dependencies = [
"smartsheet-python-sdk"
]

[tool.setuptools.packages]
find = {}

[project.urls]
Homepage = "https://github.com/shrank/smartsheet-helper"